checkout er igang.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,5 +41,7 @@
     <string name="bottomMenuHome">Home</string>
     <string name="bottomMenuMenu">Our Menu</string>
     <string name="bottomMenuContact">Contact</string>
-
+    <string name="checkoutTimepicker">Choose a Time for pickup</string>
+    <string name="checkoutExtraText">If you have any special request or comments, type it in the textbox below</string>
+    <string name="checkoutBtnCheckout">Send Order!</string>
 </resources>
