--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,5 +43,6 @@
     <string name="bottomMenuContact">Contact</string>
     <string name="checkoutTimepicker">Choose a Time for pickup</string>
     <string name="checkoutExtraText">If you have any special request or comments, type it in the textbox below</string>
+    <string name="checkoutTotalPrice">Total price for your items: </string>
     <string name="checkoutBtnCheckout">Send Order!</string>
 </resources>
