--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,6 @@
     <string name="checkoutExtraText">If you have any special request or comments, type it in the textbox below</string>
     <string name="checkoutTotalPrice">Total price for your items: </string>
     <string name="checkoutBtnCheckout">Send Order!</string>
+    <string name="homeWelcomeHeader">Restaurant DTU App</string>
+
 </resources>
