--- a/app/src/main/res/values-dk/strings.xml
+++ b/app/src/main/res/values-dk/strings.xml
@@ -61,7 +61,8 @@
     <string name="userProfile_name">Navn</string>
     <string name="userProfile_updateProfile">Opdater profil</string>
 
-
+    <string name="addNewProduct">Tilføj Produkt</string>
+    <string name="removeProduct">Fjern Produkt</string>
 
 
 
